--- a/public/index.html
+++ b/public/index.html
@@ -10,7 +10,7 @@
 	<link rel='stylesheet' href='global.css'>
 	<link rel='stylesheet' href='build/bundle.css'>
 
-	<script defer src='build/bundle.js?a10'></script>
+	<script defer src='build/bundle.js'></script>
 </head>
 
 <body>
@@ -24,7 +24,7 @@
 	}
 </style>
 
-<div id="corePreloader">Hello! Loading project core, please stand by. /v0.2.3/</div>
+<div id="corePreloader">Loading project scripts</div>
 
 </body>
 </html>
